--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
     </div>
     <div class="container" id="yoo-list">
         <div id="yoo-title-sm" class="clearfix">
-            <h2> <a href="https://www.yooying.com/hot-posts" title="Hot Posts">推荐视频</a> </h2> 
-            <!-- <a href="https://www.yooying.com/hot-posts" title="Hot Posts"
-                class="button button-white button-sm">更多</a> -->
+            <h2> 推荐视频</h2> 
+            
         </div>
         <ul class="row">
         </ul>
@@ -129,18 +128,7 @@
         <div class="errorPage">
             <p>网络遇到了一些问题，请联系网站管理员...</p>
         </div>
-        <!-- <div id="yoo-loading">
-            <div class="spinner">
-                <div class="rect1"></div>
-                <div class="rect2"></div>
-                <div class="rect3"></div>
-                <div class="rect4"></div>
-            </div>
-            <div class="button hide" data-page="home" data-switch="off" data-name="home" data-next="home"><span class="a">Load
-                    More ↓</span><span class="b">Loading fail. Click retry.</span></div>
-            <div class="end"> <a href="https://www.yooying.com/inspirations?ref=discover" rel="nofollow" class="button">See
-                    More</a> </div>
-        </div> -->
+        
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/imgload.min.js"></script>
