--- a/video.html
+++ b/video.html
@@ -147,7 +147,7 @@
         </div>
         <div id="yoo-list">
             <div id="yoo-title-sm" class="clearfix">
-                <h2> <a href="index.html"> 精彩推荐 </a> </h2>
+                <h2>精彩推荐</h2>
             </div>
             <ul class="row">
             </ul>
