--- a/category.html
+++ b/category.html
@@ -17,11 +17,12 @@
             <a href="index.html"  class="i-brand"> 沙抖创意 </a>
             <nav class="nav-bar">
                 <a href="index.html">首页</a>
-                <a href="type.html">分类</a>
+                <a href="type.html">创意分类</a>
                 <a href="javascript:;">案例</a>
                 <a href="buy.html">订购</a>
-                <a href="javascript:;">招募合作</a>
-                <a href="javascript:;">关于</a>
+                <a href="javascript:;">编导中心</a>
+                <a href="javascript:;">主播中心</a>
+                <a href="javascript:;">关于沙抖</a>
             </nav>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
@@ -38,24 +39,15 @@
                 </svg>
             </a>
         </nav>
-        <nav class="nav-bar">
-            <!-- <a href="#/" title="Discover">Discover</a> 
-            <a href="#/inspirations"title="Inspirations">Inspirations</a> 
-            <a href="#/hot-posts"title="What&#39;s hot">What's hot</a> 
-            <a href="#/inspirations/girls"title="Girls">Girls</a> 
-            <a href="#/inspirations/travel" title="Travel">Travel</a> 
-            <a href="#/inspirations/funny" title="Funny">Funny</a> 
-            <a href="#/tag/love" title="Love">#Love</a> 
-            <a href="#/tag/instagood" title="Instagood">#Instagood</a> 
-            <a href="#/tag/beautiful" title="Beautiful">#Beautiful</a> -->
-        </nav>
+        
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
-            <li><a href="buy.html">订购</a></li>
             <li><a href="javascript:;">案例</a></li>
-            <li><a href="javascript:;">招募合作</a></li>
-            <li><a href="javascript:;">关于</a></li>
+            <li><a href="buy.html">订购</a></li>
+            <li><a href="javascript:;">编导中心</a></li>
+            <li><a href="javascript:;">主播中心</a></li>
+            <li><a href="javascript:;">关于沙抖</a></li>
         </ul>
     </header>
     <div id="yoo-top">
