--- a/type.html
+++ b/type.html
@@ -17,11 +17,12 @@
             <a href="index.html"  class="i-brand"> 沙抖创意 </a>
             <nav class="nav-bar">
                 <a href="index.html">首页</a>
-                <a href="type.html">分类</a>
+                <a href="type.html">创意分类</a>
                 <a href="javascript:;">案例</a>
                 <a href="buy.html">订购</a>
-                <a href="javascript:;">招募合作</a>
-                <a href="javascript:;">关于</a>
+                <a href="javascript:;">编导中心</a>
+                <a href="javascript:;">主播中心</a>
+                <a href="javascript:;">关于沙抖</a>
             </nav>
             <a href="javascript:;" class="i-menu">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="24" height="24" stroke-width="3.5">
@@ -42,10 +43,11 @@
         <ul class="nav-dropdown">
             <li><a href="index.html">首页</a></li>
             <li><a href="type.html">创意分类</a></li>
-            <li><a href="buy.html">订购</a></li>
             <li><a href="javascript:;">案例</a></li>
-            <li><a href="javascript:;">招募合作</a></li>
-            <li><a href="javascript:;">关于</a></li>
+            <li><a href="buy.html">订购</a></li>
+            <li><a href="javascript:;">编导中心</a></li>
+            <li><a href="javascript:;">主播中心</a></li>
+            <li><a href="javascript:;">关于沙抖</a></li>
         </ul>
     </header>
     <div id="yoo-top">
